fixed overflow issues

--- a/project-2/style.css
+++ b/project-2/style.css
@@ -19,6 +19,8 @@ body {
     margin: 0;
     padding: 0;
     height: 100%;
+    max-width: 100%;
+    overflow-x: hidden;
 }
 
 p,
@@ -31,6 +33,10 @@ h3 {
 
 h1 {
     font-size: 6em;
+}
+
+.section {
+    max-width: 100%;
 }
 
 .star {
